# pyrchidekt

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
pyrchidekt/: api.py  cards.py  categories.py  deck.py  edition.py  formats.py  mana.py  owner.py
tests/integration/: test_integration.py
tests/unit/: test_pychidekt.py
tests/unit/resources/: deck.json
