[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrchidekt"
authors = [
    {name = "Ian Drake", email="linkian209@gmail.com"}
]
description = "Archidekt API Wrapper for Python"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["archidekt", "mtg", "magic"]
classifiers = [
    "Programming Language :: Python"
]
requires-python = ">=3.11"
dependencies = ["requests"]
dynamic = ["version"]

[tool.setuptools_scm]